@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.4.18-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-04-18 06:11:48, took 00:13:35, with 60 workers, on 3428 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2024-04-18 06:54:12, took 00:12:44, with 60 workers, on 3434 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -2922,6 +2922,12 @@ http://sources.freertr.org/cfg/rout-bgp850.tst;rout-bgp850.tst;success;unicast+m
 http://sources.freertr.org/cfg/rout-bgp851.tst;rout-bgp851.tst;success;unicast+othermtree over bgp
 http://sources.freertr.org/cfg/rout-bgp852.tst;rout-bgp852.tst;success;unicast+othermtree over bgp with soft-reconfig
 http://sources.freertr.org/cfg/rout-bgp853.tst;rout-bgp853.tst;success;unicast+othermtree over bgp with additional path
+http://sources.freertr.org/cfg/rout-bgp854.tst;rout-bgp854.tst;success;bgp routemap filtering with pathlimit
+http://sources.freertr.org/cfg/rout-bgp855.tst;rout-bgp855.tst;success;bgp routepolicy filtering with pathlimit
+http://sources.freertr.org/cfg/rout-bgp856.tst;rout-bgp856.tst;success;bgp routemap filtering with pathlimit with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp857.tst;rout-bgp857.tst;success;bgp routepolicy filtering with pathlimit with soft-reconfig
+http://sources.freertr.org/cfg/rout-bgp858.tst;rout-bgp858.tst;success;bgp change in pathlimit
+http://sources.freertr.org/cfg/rout-bgp859.tst;rout-bgp859.tst;success;bgp change in pathlimit with soft-reconfig
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
