@@ -2918,6 +2918,12 @@ qc pass: unicast+mtree over bgp with additional path
 qc pass: unicast+othermtree over bgp
 qc pass: unicast+othermtree over bgp with soft-reconfig
 qc pass: unicast+othermtree over bgp with additional path
+qc pass: bgp routemap filtering with pathlimit
+qc pass: bgp routepolicy filtering with pathlimit
+qc pass: bgp routemap filtering with pathlimit with soft-reconfig
+qc pass: bgp routepolicy filtering with pathlimit with soft-reconfig
+qc pass: bgp change in pathlimit
+qc pass: bgp change in pathlimit with soft-reconfig
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
