@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.4.18-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-04-18 06:11:48, took 00:13:35, with 60 workers, on 3428 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2024-04-18 06:54:12, took 00:12:44, with 60 workers, on 3434 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2939,6 +2939,12 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp851.tst">rout-bgp851.tst</a></td><td>success</td><td>unicast+othermtree over bgp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp852.tst">rout-bgp852.tst</a></td><td>success</td><td>unicast+othermtree over bgp with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp853.tst">rout-bgp853.tst</a></td><td>success</td><td>unicast+othermtree over bgp with additional path</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp854.tst">rout-bgp854.tst</a></td><td>success</td><td>bgp routemap filtering with pathlimit</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp855.tst">rout-bgp855.tst</a></td><td>success</td><td>bgp routepolicy filtering with pathlimit</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp856.tst">rout-bgp856.tst</a></td><td>success</td><td>bgp routemap filtering with pathlimit with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp857.tst">rout-bgp857.tst</a></td><td>success</td><td>bgp routepolicy filtering with pathlimit with soft-reconfig</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp858.tst">rout-bgp858.tst</a></td><td>success</td><td>bgp change in pathlimit</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp859.tst">rout-bgp859.tst</a></td><td>success</td><td>bgp change in pathlimit with soft-reconfig</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
