@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.4.18-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-04-18 06:22:12, took 00:10:06, with 60 workers, on 544 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-04-18 07:05:14, took 00:10:44, with 60 workers, on 544 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
